fixed ImmutableEffectedImportsTest + ImmutablePolicyImportTest
Signed-off-by: Thomas Jaeckle <thomas.jaeckle@bosch.io>